1) showing button fixed 2) sorting bar disappearing 3) add padding to the bottom of pearl and clam box on mobile

--- a/src/index.scss
+++ b/src/index.scss
@@ -14,6 +14,13 @@
   bottom: 0;
 }
 
+.m-opacity-0 {
+  opacity: 0 !important;
+} 
+.m-invisible {
+  visibility: hidden !important;
+}
+
 @font-face {
   font-family: AristotelicaBold;
   src: url(./assets/fonts/aristotelicaText_bold.otf) format("opentype");
