--- a/src/views/saferoom/index.scss
+++ b/src/views/saferoom/index.scss
@@ -59,7 +59,7 @@
 
     .pearlDiv {
       text-align: center;
-      padding: 0px 20px 0px 20px;
+      padding: 0px 20px 30px 20px;
 
       .title {
         font-family: 'Aristotelica Text';
